
This file shows the changes in recent releases of MODX. The most current release is usually the
development release, and is only shown to give an idea of what's currently in the pipeline.

- [#4637] Fix RTE checkbox not saving correctly when using Quick Create Resource
- [#5268] Add search toolbar for Resource tree
- [#4080] Add Content Type and Content Disposition to Quick Create/Update Resource
- [#5250] Add check for cURL in Package Management
- [#5204] Add search by parent to mgr search page
- Added much better handling for custom resource classes; deprecated custom_resource_classes setting
- [#4601] Ensure children of protected Resources inherit by default their parent's Resource Groups in create UI
- [#4016] Update description text in grid when adding/updating element properties without need for page reload
- [#2860] Fix 'Sent On' date when viewing an expanded message
- [#4984] Ensure tree highlighting of currently edited resource/element/file works consistently
- [#2638] When updating an element's category, ensure old treenode is removed
- [#5139] Fix issues with MODx.Browser and file/image TVs in other contexts
- [#4958] Add IDs to Resource Groups in RG tree
- Add ability to rename Resource Groups
- [#5185] Improve core package already extracted validation for upgrades
- Update xPDO and regenerate schema to get new maps of derivative classes
- [#5195] Change TV value fields from TEXT to MEDIUMTEXT (mysql)
- [#5141] Add ability to override specific controllers/templates in a custom manager theme w/ fallback to default
- Add modResource::getControllerPath method for better abstraction of derivative resource types
- Add show_in_tree and hide_children_in_tree fields to modResource for better support with custom Resource types
- Abstract all manager controllers to classes to improve usability, testing and creation of controllers

MODX Revolution 2.1.3-pl (July 21, 2011)
====================================