@@ -18,6 +18,7 @@ $xpdo_meta_map['modUser']= array (
     'remote_data' => NULL,
     'hash_class' => 'hashing.modPBKDF2',
     'salt' => '',
+    'primary_group' => 0,
   ),
   'fieldMeta' => 
   array (
@@ -94,6 +95,16 @@ $xpdo_meta_map['modUser']= array (
       'null' => false,
       'default' => '',
     ),
+    'primary_group' => 
+    array (
+      'dbtype' => 'int',
+      'precision' => '10',
+      'phptype' => 'integer',
+      'attributes' => 'unsigned',
+      'null' => false,
+      'default' => 0,
+      'index' => 'index',
+    ),
   ),
   'indexes' => 
   array (
@@ -138,6 +149,22 @@ $xpdo_meta_map['modUser']= array (
       'columns' => 
       array (
         'remote_key' => 
+        array (
+          'length' => '',
+          'collation' => 'A',
+          'null' => false,
+        ),
+      ),
+    ),
+    'primary_group' => 
+    array (
+      'alias' => 'primary_group',
+      'primary' => false,
+      'unique' => false,
+      'type' => 'BTREE',
+      'columns' => 
+      array (
+        'primary_group' => 
         array (
           'length' => '',
           'collation' => 'A',
@@ -195,6 +222,14 @@ $xpdo_meta_map['modUser']= array (
       'foreign' => 'recipient',
       'cardinality' => 'many',
       'owner' => 'local',
+    ),
+    'PrimaryGroup' => 
+    array (
+      'class' => 'modUserGroup',
+      'local' => 'primary_group',
+      'foreign' => 'id',
+      'cardinality' => 'one',
+      'owner' => 'foreign',
     ),
   ),
   'composites' => 
