@@ -12,6 +12,7 @@ $modx->lexicon->load('user');
 
 /* get user */
 if (empty($scriptProperties['id'])) return $modx->error->failure($modx->lexicon('user_err_ns'));
+/** @var modUser $user */
 $user = $modx->getObject('modUser',$scriptProperties['id']);
 if ($user == null) return $modx->error->failure($modx->lexicon('user_err_nf'));
 
@@ -45,6 +46,7 @@ if (!empty($canSave)) {
 if (isset($scriptProperties['groups'])) {
     /* remove prior user group links */
     $ugms = $user->getMany('UserGroupMembers');
+    /** @var modUserGroupMember $ugm */
     foreach ($ugms as $ugm) { $ugm->remove(); }
 
     /* create user group links */
@@ -65,14 +67,14 @@ if ($user->save() == false) {
     return $modx->error->failure($modx->lexicon('user_err_save'));
 }
 
-$user->profile = $user->getOne('Profile');
-if (empty($user->profile)) {
-    $user->profile = $modx->newObject('modUserProfile');
-    $user->profile->set('internalKey',$user->get('id'));
+$user->getOne('Profile');
+if (empty($user->Profile)) {
+    $user->Profile = $modx->newObject('modUserProfile');
+    $user->Profile->set('internalKey',$user->get('id'));
 }
-$user->profile->fromArray($scriptProperties);
+$user->Profile->fromArray($scriptProperties);
 
-if ($user->profile->save() == false) {
+if ($user->Profile->save() == false) {
     return $modx->error->failure($modx->lexicon('user_profile_err_save'));
 }
 
@@ -80,9 +82,9 @@ if ($user->profile->save() == false) {
 if ($scriptProperties['passwordnotifymethod'] == 'e') {
     $message = $modx->getOption('signupemail_message');
     $placeholders = array(
-        'uid' => $user->profile->get('username'),
+        'uid' => $user->Profile->get('username'),
         'pwd' => $newPassword,
-        'ufn' => $user->profile->get('fullname'),
+        'ufn' => $user->Profile->get('fullname'),
         'sname' => $modx->getOption('site_name'),
         'saddr' => $modx->getOption('emailsender'),
         'semail' => $modx->getOption('emailsender'),
