@@ -2321,7 +2321,7 @@ body.x-body-masked .x-window-plain .x-window-mc {
     margin-bottom: 5px;
 }
 
-
+/* grid checker */
 .x-grid3-body .x-grid3-td-checker {
     background-image: none !important;
 }
