@@ -2,6 +2,7 @@
 This file shows the changes in recent releases of MODX. The most current release is usually the
 development release, and is only shown to give an idea of what's currently in the pipeline.
 
+- Add ability to select Primary User Group for User
 - [#4637] Fix RTE checkbox not saving correctly when using Quick Create Resource
 - [#5268] Add search toolbar for Resource tree
 - [#4080] Add Content Type and Content Disposition to Quick Create/Update Resource
